  - error messages are more consistent (still not always great messages,
    but one step at a time)
- added bmp_compression_name, bmp_used_colors, bmp_filesize, bmp_bit_count 
  tags on reading a BMP file
- added tools/imager to the distribution.  This is still very 
  experimental and untested.  Patches welcome, if you write tests to go
  with them.
- the BMP reader now validates the bfOffBits value from the BMP header
  and skips to that offset before reading image data.  Previously this
  value was read but otherwise ignored.
- added --palette action to tools/imager
- i_img_pal_new() now releases the image object memory if creation
  fails.
- set i_format to gif when reading gif files and test for it
- set i_format to pnm when reading pnm files and test for it
- set i_format to tga when reading tga files and test for it
- handle image creation failures when reading tga files
- set i_format to tiff when reading tiff images and test for it
- handle image creation failures when reading tiff files
- test t/t35ttfont.t no longer requires TTFONTTEST to be set (and 
  hasn't for a long time,) removed that requirement from README
- updated home page URLs throughout the .pods
- added information on reporting bugs to the SUPPORT section of Imager.pm
- regops.perl now sorts the dumped data structure to produce minimal diffs
- quant.c now checks for integer overflow allocating its image data
- i_readraw_wiol() now checks for image creation failure
- i_readrgb_wiol() now checks for image creation failure
- i_writergb_wiol() was an empty stub, it now pushes an error message
  and explicitly returns failure.
- i_readrgb_wiol() now sets i_format to rgb.
- set i_format to raw when reading tga files and test for it
- document i_format tag

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
